# karpathy-follow-along

./: README.md  pyproject.toml
micrograd/: nn.py  optim.py  value.py
tests/micrograd/: test_micrograd.py  test_nn.py  test_optim.py
