[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "karpathy-follow-along"
version = "0.1.0"
authors = [
    {name = "Artem Vasenin", email = "vasart169@gmail.com"},
]
description = "Following along with Andrej Karpathy's youtube videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
